Fix final item in stack vertical spacing

--- a/public/index.css
+++ b/public/index.css
@@ -78,8 +78,12 @@ nav ul {
 
 .content > section > * + *,
 .content > section > blockquote > * + *,
-.content > section > :is(ul, ol) > li > * + * {
+.content > section > :is(ul, ol) > li > * + *,
+.content details > * + * {
 	margin-top: 1.25rem;
+}
+
+.content > section > :is(ul, ol) > li > * + * {
 	margin-bottom: 1.25rem;
 }
 
